aspire/CarvedRock-Aspire.AppHost/aspirate-output/smtp-4-dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: smtp-4-dev
spec:
  type: ClusterIP
  selector:
    app: smtp-4-dev
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: smtp
    port: 25
    targetPort: 25
