aspire/CarvedRock-Aspire.AppHost/aspirate-output/smtp-4-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cr-email
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mail.carvedrock.local        
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smtp-4-dev
            port: 
              number: 80
